force-app/main/default/objects/b3o__Question_Response__c/b3o__Question_Response__c.object-meta.xml
<CustomObject>
    <label>Question Response</label>
    <nameField>
        <displayFormat>Q-RESP-{0}</displayFormat>
        <label>Question Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>