force-app/main/default/objects/b3o__Question_Response__c/fields/b3o__Candidate_Scorecard__c.field-meta.xml
<CustomField>
    <fullName>b3o__Candidate_Scorecard__c</fullName>
    <label>Candidate Scorecard</label>
    <referenceTo>b3o__Candidate_Scorecard__c</referenceTo>
    <relationshipLabel>Question Responses</relationshipLabel>
    <relationshipName>Question_Responses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>