force-app/main/default/objects/b3o__Question_Response__c/fields/b3o__Checkbox__c.field-meta.xml
<CustomField>
    <fullName>b3o__Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox</label>
    <type>Checkbox</type>
</CustomField>