force-app/main/default/objects/b3o__Question_Response__c/fields/b3o__Currency__c.field-meta.xml
<CustomField>
    <fullName>b3o__Currency__c</fullName>
    <label>Currency</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>