force-app/main/default/objects/b3o__Question_Response__c/fields/b3o__Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>b3o__Internal_Notes__c</fullName>
    <label>Internal Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>