force-app/main/default/objects/b3o__Question_Response__c/fields/b3o__Locked__c.field-meta.xml
<CustomField>
    <fullName>b3o__Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>