force-app/main/default/objects/b3o__Question_Response__c/fields/b3o__Question__c.field-meta.xml
<CustomField>
    <fullName>b3o__Question__c</fullName>
    <label>Question</label>
    <referenceTo>b3o__Question__c</referenceTo>
    <relationshipLabel>Question Responses</relationshipLabel>
    <relationshipName>Question_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>