force-app/main/default/objects/b3o__Question_Response__c/fields/b3o__Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>b3o__Rich_Text__c</fullName>
    <label>Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>