force-app/main/default/objects/b3o__Question_Response__c/fields/b3o__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>b3o__Start_Time__c</fullName>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>