force-app/main/default/objects/b3o__Question_Response__c/validationRules/b3o__Error_Test.validationRule-meta.xml
<ValidationRule>
    <fullName>b3o__Error_Test</fullName>
    <active>false</active>
    <errorConditionFormula>1==1</errorConditionFormula>
    <errorMessage>We encountered a validation error</errorMessage>
</ValidationRule>